# rust-esp32-std-mini

./: Cargo.toml  rust-toolchain.toml
